chore: add vm to swagger docs and fix error (#713)
* chore: add vm to swagger docs

* chore: fix double spacing
